# ska-pst-send

./: .gitlab-ci.yml  .release  MANIFEST.skao.int  Makefile  README.md  mypy.ini  pyproject.toml  setup.py
.gitlab/ci/: overrides.gitlab-ci.yml
dependencies/: base.apt.txt  runtime.pip.txt
docs/: Doxyfile
docs/src/: conf.py  index.rst
docs/src/api/: library_root.rst
docs/src/apps/: index.rst
docs/src/package/: guide.rst
docs/src/package/data_product_dashboard/: index.rst
docs/src/package/metadata/: index.rst
docs/src/package/sdp_transfer/: index.rst
images/ska-pst-send/: Dockerfile
images/ska-pst-send-builder/: Dockerfile
src/ska/protosend/: __init__.py  dataproduct_file_manager.py  metadata.py  metadata_builder.py
src/ska_pst_send/: __init__.py  dataproduct_file_manager.py  dpd_api_client.py  metadata.py  metadata_builder.py  scan.py  scan_manager.py  scan_process.py  scan_transfer.py  sdp_transfer.py  voltage_recorder_file.py  voltage_recorder_scan.py
tests/: __init__.py  conftest.py  test_example.py  test_metadata.py  test_metadata_builder.py
tests/unit/: test_dpd_api_client.py  test_metadata.py  test_metadata_builder.py  test_scan.py  test_scan_manager.py  test_scan_process.py  test_scan_transfer.py  test_sdp_transfer.py  test_voltage_recorder_scan.py
