[tool.poetry]
name = "protosend"
version = "0.0.0"
description = ""
authors = ["Jesmigel A. Cantos <jesmigel.developer@gmail.com>"]
include = ["src/ska/pst/send"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
astropy = "^5.3.1"
black = "^23.7.0"
build = "^0.10.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
nptyping = "^2.5.0"
pylint-junit = "^0.3.2"
pytest = "^6.2"
pytest-cov = "^3.0.0"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
